[package]
name = "axun_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.183"
serde_json = "1.0.105"
env_logger = "0.10.0"

#slog = "2.7.0"
#slog-async = "2.7.0"
#slog-json = "2.6.1"
#slog-term = "2.9.0"
#tracing-actix-web = "0.7.6"
#tracing = "0.1.37"
#tracing-subscriber = "0.3.17"

log4rs = "1.2.0"
log = "0.4.20"